# ChangeLog for media-gfx/inkscape
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.62 2007/04/08 10:42:43 corsair Exp $

  08 Apr 2007; Markus Rothe <corsair@gentoo.org> inkscape-0.45.1.ebuild:
  Stable on ppc64; bug #171799

  07 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  inkscape-0.45.1.ebuild:
  stable x86, security bug 171799

*inkscape-0.45.1 (07 Apr 2007)

  07 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
  +inkscape-0.45.1.ebuild:
  Version bump for security bug #171799. Also fixes bugs #106123 (importing
  postscript), bug #147822, bug #162237, bug #169308 (useless dep on boost).
  In this version the plugin use flag was splitted to wmf, postcript and dia
  use flags and the ebuild in general cleaned.

  06 Feb 2007; Jeroen Roovers <jer@gentoo.org> inkscape-0.45.ebuild:
  Increase minimal x11-libs/gtk+ version in accordance with Release Notes.

*inkscape-0.45 (06 Feb 2007)

  06 Feb 2007; Jeroen Roovers <jer@gentoo.org> +inkscape-0.45.ebuild:
  Version bump.

  05 Feb 2007; Jeroen Roovers <jer@gentoo.org> inkscape-0.44.1.ebuild:
  Stable for HPPA (inkscape).

  04 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> inkscape-0.44.ebuild:
  Fix broken autotools handling.

*inkscape-0.44.1 (11 Oct 2006)

  11 Oct 2006; Hanno Boeck <hanno@gentoo.org> +inkscape-0.44.1.ebuild:
  Version bump.

  07 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> inkscape-0.44.ebuild:
  Stable on sparc

  26 Aug 2006; Hanno Boeck <hanno@gentoo.org> +files/inkscape-gcc42.diff,
  inkscape-0.44.ebuild:
  Fix for gcc42.

  02 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org> inkscape-0.44.ebuild:
  fix invalid dep

  28 Jun 2006; Jeroen Roovers <jer@gentoo.org> inkscape-0.44.ebuild:
  Marked ~hppa.

  27 Jun 2006; Luca Barbato <lu_zero@gentoo.org> inkscape-0.44.ebuild:
  dep bump for lcms, thanks to <jackdoozer@yahoo.com> for the report in the
  bug #138260
