@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/pstoedit
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/pstoedit/ChangeLog,v 1.36 2007/04/08 10:36:26 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/pstoedit/ChangeLog,v 1.37 2007/04/08 12:03:54 dertobi123 Exp $
+
+  08 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  pstoedit-3.44.ebuild:
+  ppc stable, bug #171799
 
   08 Apr 2007; Markus Rothe <corsair@gentoo.org> pstoedit-3.44.ebuild:
   Stable on ppc64; bug #171799
