@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/inkscape
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.62 2007/04/08 10:42:43 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.63 2007/04/08 12:04:23 dertobi123 Exp $
+
+  08 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  inkscape-0.45.1.ebuild:
+  ppc stable, bug #171799
 
   08 Apr 2007; Markus Rothe <corsair@gentoo.org> inkscape-0.45.1.ebuild:
   Stable on ppc64; bug #171799
